--- a/index.html
+++ b/index.html
@@ -161,22 +161,22 @@
   <section id="services">
     <div class="container">
       <h2 class="section-title">Services built for ROI</h2>
-      <p class="muted">Everything you need to capture and close premium local leads — without extra busywork.</p>
+      <p class="muted">We specialize in Social Media Marketing, Ad Management on Google & Meta, and Local SEO — tuned for high‑value local services.</p>
       <div class="grid cols-3" style="margin-top:18px">
         <div class="card">
-          <h3>Local SEO & Google Business Profile</h3>
-          <p class="muted">Rank in Newport Beach & Newport Coast, earn reviews on autopilot, and show up when homeowners are ready.</p>
-          <span class="chip">Listings</span><span class="chip">Reviews</span><span class="chip">Maps</span>
+          <h3>Social Media Marketing</h3>
+          <p class="muted">Strategy, content, and posting across Instagram, Facebook, and TikTok with UGC‑style creatives that convert.</p>
+          <span class="chip">Instagram</span><span class="chip">Facebook</span><span class="chip">TikTok</span>
         </div>
         <div class="card">
-          <h3>Paid Ads That Qualify</h3>
-          <p class="muted">Precision Google & Meta campaigns aimed at high‑value projects with clear call tracking and form attribution.</p>
-          <span class="chip">PPC</span><span class="chip">Retargeting</span><span class="chip">Call Tracking</span>
+          <h3>Ad Management (Google & Meta)</h3>
+          <p class="muted">Precision campaigns for leads now: Google Search/PMAX and Meta Lead Ads — with call/form tracking end‑to‑end.</p>
+          <span class="chip">Google Ads</span><span class="chip">Meta Ads</span><span class="chip">Retargeting</span>
         </div>
         <div class="card">
-          <h3>Automation & Lead Nurture</h3>
-          <p class="muted">Instant SMS/email follow‑ups, reminders, and pipeline dashboards so no inquiry slips through.</p>
-          <span class="chip">CRM</span><span class="chip">Workflows</span><span class="chip">Dashboards</span>
+          <h3>Local SEO</h3>
+          <p class="muted">Rank in Newport Beach & Newport Coast with GBP optimization, review automation, and local landing pages.</p>
+          <span class="chip">Maps</span><span class="chip">Reviews</span><span class="chip">Citations</span>
         </div>
       </div>
     </div>
@@ -200,7 +200,7 @@
       <p class="muted">We measure what matters: qualified inquiries, booked consults, and signed projects.</p>
       <div class="stats" style="margin-top:18px">
         <div class="stat"><div class="num">+5–10x</div><div class="lbl">Increase in monthly inquiries</div></div>
-        <div class="stat"><div class="num">< 5 min</div><div class="lbl">Average lead response time</div></div>
+        <div class="stat"><div class="num">&lt; 5 min</div><div class="lbl">Average lead response time</div></div>
         <div class="stat"><div class="num">100%</div><div class="lbl">Transparent call + form tracking</div></div>
       </div>
       <div class="cta" style="margin-top:18px">
@@ -212,11 +212,11 @@
 
   <section id="process">
     <div class="container">
-      <h2 class="section-title">Simple, fast process</h2>
+      <h2 class="section-title">Seamless Process, Ongoing Results</h2>
       <div class="steps" style="margin-top:12px">
         <div class="step"><div class="n">1</div><h3>Discovery</h3><p class="muted">15‑minute call to align on goals, service area, and budget.</p></div>
-        <div class="step"><div class="n">2</div><h3>Blueprint</h3><p class="muted">Targeting, offers, and automation map tailored to your crew.</p></div>
-        <div class="step"><div class="n">3</div><h3>Launch</h3><p class="muted">Ads + SEO go live, lead capture & follow‑ups switched on.</p></div>
+        <div class="step"><div class="n">2</div><h3>Blueprint</h3><p class="muted">Targeting, offers, and automation map tailored to Social, Ads, and Local SEO.</p></div>
+        <div class="step"><div class="n">3</div><h3>Launch</h3><p class="muted">Campaigns go live; lead capture & follow‑ups switched on.</p></div>
         <div class="step"><div class="n">4</div><h3>Optimize</h3><p class="muted">Weekly tuning with clear reporting on what’s working.</p></div>
       </div>
       <div class="cta-band" style="margin-top:18px">
@@ -262,7 +262,7 @@
         <strong>GreatSurf.io</strong>
         <div class="muted">Newport Beach, California</div>
       </div>
-      <div class="muted">© <span id="y"></span> GreatSurf.io • Built with AI + a lot of coffee ☕️</div>
+      <div class="muted">© <span id="y"></span> GreatSurf.io • Founded in Newport Beach, CA</div>
     </div>
   </footer>
 
